package assignment_06_00;

abstract class Dog{
    int position;
    int averageLength;

    abstract void move();
    abstract void describe();
}