package assignment_06_00;

public class Smartphone implements Teknologi {
    private int price;
    private String brand;

    @Override
    public void move() {
    System.out.println("smartphone berpindah");
    }
    
}
