interface Teknologi {
    void move();
}
